fix: handle unchecked exceptions